updated index.html: add modal form markup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,16 +30,16 @@
           <ul class="site-nav">
             <li class="site-nav-item">
               <a href="./index.html" class="link current site-nav-link"
-                >Studio</a
+                >Студія</a
               >
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" class="link site-nav-link"
-                >Portfolio</a
+                >Портфоліо</a
               >
             </li>
             <li class="site-nav-item">
-              <a href="" class="link site-nav-link">Contacts</a>
+              <a href="" class="link site-nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -69,9 +69,9 @@
       <!-- hero screen -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective solutions for your business</h1>
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open class="button primary" type="button">
-            Order a service
+            Замовити послугу
           </button>
         </div>
       </section>
@@ -79,7 +79,7 @@
       <!-- benefits -->
       <section class="section benefits">
         <div class="container">
-          <h2 class="title visually-hidden">Features</h2>
+          <h2 class="title visually-hidden">Особливості</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <div class="benefits-pic">
@@ -87,10 +87,10 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Attention to detail</h3>
+              <h3 class="benefits-title">Увага до деталей</h3>
               <p class="content">
-                Conceptual ideas and even the beginning of everyday work to form
-                a position.
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
               </p>
             </li>
             <li class="benefits-item">
@@ -99,10 +99,10 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Punctuality</h3>
+              <h3 class="benefits-title">Пунктуальність</h3>
               <p class="content">
-                The task of the organization, especially the framework and the
-                place of training, draws in.
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
               </p>
             </li>
             <li class="benefits-item">
@@ -111,10 +111,9 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Planning</h3>
+              <h3 class="benefits-title">Планування</h3>
               <p class="content">
-                Consultation with a wide range of stakeholders largely
-                determines it.
+                Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="benefits-item">
@@ -123,10 +122,10 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="benefits-title">Modern technologies</h3>
+              <h3 class="benefits-title">Сучасні технології</h3>
               <p class="content">
-                The significance of these issues is so obvious that the
-                implementation of planned tasks is necessary.
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
               </p>
             </li>
           </ul>
@@ -137,18 +136,18 @@
 
       <section class="section works">
         <div class="container">
-          <h2 class="title">What we do</h2>
+          <h2 class="title">Чим ми займаємося</h2>
           <ul class="works-list">
             <li>
               <div class="works-thumb">
                 <img
                   class="works-pic"
                   src="./images/img-1.jpg"
-                  alt="Desktop apps"
+                  alt="Десктопні додатки"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Desktop apps</p>
+                <p class="works-label">Десктопні додатки</p>
               </div>
             </li>
             <li>
@@ -156,11 +155,11 @@
                 <img
                   class="works-pic"
                   src="./images/img-2.jpg"
-                  alt="Mobile apps"
+                  alt="Мобільні додатки"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Mobile apps</p>
+                <p class="works-label">Мобільні додатки</p>
               </div>
             </li>
             <li>
@@ -168,11 +167,11 @@
                 <img
                   class="works-pic"
                   src="./images/img-3.jpg"
-                  alt="Design solutions"
+                  alt="Дизайнерські рішення"
                   width="370"
                   height="294"
                 />
-                <p class="works-label">Design solutions</p>
+                <p class="works-label">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
@@ -183,18 +182,18 @@
 
       <section class="section our-team">
         <div class="container">
-          <h2 class="title">Our Team</h2>
+          <h2 class="title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
               <img
                 class="team-pic"
                 src="./images/product-designer.jpg"
-                alt="Product Designer"
+                alt="Дизайнер продукту"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Ihor Demyanenko</h3>
+                <h3 class="subtitle">Ігор Дем'яненко</h3>
                 <p class="team-position" lang="en">Product Designer</p>
 
                 <ul class="socials-list">
@@ -247,12 +246,12 @@
               <img
                 class="team-pic"
                 src="./images/frontend-developer.jpg"
-                alt="Frontend Developer"
+                alt="Фронтенд розробник"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Olha Repina</h3>
+                <h3 class="subtitle">Ольга Рєпіна</h3>
                 <p class="team-position" lang="en">Frontend Developer</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -304,12 +303,12 @@
               <img
                 class="team-pic"
                 src="./images/marketing.jpg"
-                alt="Marketing Specialist"
+                alt="Маркетолог"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Mykola Tarasov</h3>
+                <h3 class="subtitle">Микола Тарасов</h3>
                 <p class="team-position" lang="en">Marketing</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -361,12 +360,12 @@
               <img
                 class="team-pic"
                 src="./images/ui-designer.jpg"
-                alt="UI Designer"
+                alt="UI Дизайнер"
                 width="270"
                 height="260"
               />
               <div class="team-item-content">
-                <h3 class="subtitle">Mykhailo Yermakov</h3>
+                <h3 class="subtitle">Михайло Єрмаков</h3>
                 <p class="team-position" lang="en">UI Designer</p>
                 <ul class="socials-list">
                   <li class="socials-item">
@@ -421,7 +420,7 @@
       <!-- clients -->
       <section class="clients section">
         <div class="container">
-          <h2 class="title">Our Clients</h2>
+          <h2 class="title">Постійні клієнти</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a
@@ -510,9 +509,8 @@
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                   class="link address-map"
+                  >м. Київ, пр-т Лесі Українки, 26</a
                 >
-                  26 Lesya Ukrainka Blvd, Kyiv
-                </a>
               </li>
               <li class="address-item">
                 <a href="mailto:info@devstudio.com" class="link address-link"
@@ -529,7 +527,7 @@
         </div>
 
         <div class="follow-container">
-          <p class="follow-title">Join Us</p>
+          <p class="follow-title">приєднуйтесь</p>
           <ul class="footer-follow-list">
             <li class="follow-item">
               <a
@@ -581,6 +579,24 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscribe-container">
+          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <div class="subscribe-input-container">
+            <input
+              type="email"
+              name="subscribe-input"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="button primary btn-subscribe">
+              Підписатися
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
@@ -592,6 +608,91 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+
+        <!-- modal-form -->
+
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="input-label">Ім'я</label>
+            <div class="input-wrap">
+              <input
+                autofocus
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="input"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user-phone" class="input-label">Телефон</label>
+            <div class="input-wrap">
+              <input
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                class="input"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user-email" class="input-label">Пошта</label>
+            <div class="input-wrap">
+              <input
+                type="email"
+                name="user-email"
+                id="user-email"
+                class="input"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="textarea-field">
+            <label for="user-text" class="input-label">Коментар</label>
+            <textarea
+              name="user-text"
+              id="user-text"
+              class="input-comment"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+
+          <div class="checkbox-field">
+            <input
+              type="checkbox"
+              id="privacy-policy"
+              name="privacy-policy"
+              value="on"
+              class="hidden modal-check"
+              required
+            />
+            <label for="privacy-policy" class="checkbox-label"
+              ><span class="checkbox">
+                <svg class="checkbox-icon">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              Погоджуюся з розсилкою та приймаю
+              <a href="" class="link agreement-link">Умови договору</a>
+            </label>
+          </div>
+
+          <button type="submit" class="button primary btn-submit">
+            Відправити
+          </button>
+        </form>
       </div>
     </div>
 
