updated portfolio page: added form

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,15 +29,15 @@
           >
           <ul class="site-nav">
             <li class="site-nav-item">
-              <a href="./index.html" class="link site-nav-link">Studio</a>
+              <a href="./index.html" class="link site-nav-link">Студія</a>
             </li>
             <li class="site-nav-item">
               <a href="./portfolio.html" class="link current site-nav-link"
-                >Portfolio</a
+                >Портфоліо</a
               >
             </li>
             <li class="site-nav-item">
-              <a href="" class="link site-nav-link">Contacts</a>
+              <a href="" class="link site-nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -66,31 +66,31 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <h1 class="visually-hidden">Portfolio</h1>
+          <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="list button-list">
             <li>
               <button type="button" class="button portfolio-button accent">
-                All
+                Усі
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Websites
+                Веб-сайти
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Apps
+                Додатки
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Design
+                Дизайн
               </button>
             </li>
             <li>
               <button type="button" class="button portfolio-button">
-                Marketing
+                Маркетинг
               </button>
             </li>
           </ul>
@@ -102,22 +102,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-1.jpg"
-                    alt="TechnoQuack"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">TechnoQuack</h2>
-                  <p class="portfolio-subtitle">Website</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -127,24 +127,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-2.jpg"
-                    alt="Poster New Orlean vs Golden Star"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">
-                    Poster New Orlean vs Golden Star
-                  </h2>
-                  <p class="portfolio-subtitle">Design</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -154,22 +152,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-3.jpg"
-                    alt="Seafood Restaurant"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Seafood Restaurant</h2>
-                  <p class="portfolio-subtitle">App</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Додаток</p>
                 </div>
               </a>
             </li>
@@ -179,22 +177,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-4.jpg"
-                    alt="Project Prime"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Project Prime</h2>
-                  <p class="portfolio-subtitle">Marketing</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -204,22 +202,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-5.jpg"
-                    alt="Project Boxes"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Project Boxes</h2>
-                  <p class="portfolio-subtitle">App</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Додаток</p>
                 </div>
               </a>
             </li>
@@ -229,22 +227,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-6.jpg"
-                    alt="Inspiration has no Borders"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                  <p class="portfolio-subtitle">Website</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -254,22 +252,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-7.jpg"
-                    alt="Limited Edition Publication"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Limited Edition Publication</h2>
-                  <p class="portfolio-subtitle">Design</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -279,22 +277,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-8.jpg"
-                    alt="Project LAB"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Project LAB</h2>
-                  <p class="portfolio-subtitle">Marketing</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -304,22 +302,22 @@
                   <img
                     class="carts-pic"
                     src="./images/portfolio-9.jpg"
-                    alt="Growing Business"
+                    alt="Ресторан"
                     width="370"
                     height="294"
                   />
                   <div class="hover-overlay">
                     <p class="overlay-content">
-                      The resource offers comprehensive offers with different
-                      levels of functionality and services. All this will allow
-                      the user to get comprehensive information about the
-                      company or individual.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
                     </p>
                   </div>
                 </div>
                 <div class="cards-content">
-                  <h2 class="portfolio-title">Growing Business</h2>
-                  <p class="portfolio-subtitle">App</p>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-subtitle">Додаток</p>
                 </div>
               </a>
             </li>
@@ -344,7 +342,7 @@
                   target="_blank"
                   rel="nofollow noreferrer noopener"
                   class="link address-map"
-                  >26 Lesya Ukrainka Blvd, Kyiv</a
+                  >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="address-item">
@@ -362,7 +360,7 @@
         </div>
 
         <div class="follow-container">
-          <p class="follow-title">Join Us</p>
+          <p class="follow-title">приєднуйтесь</p>
           <ul class="footer-follow-list">
             <li class="follow-item">
               <a
@@ -414,6 +412,24 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscribe-container">
+          <p class="subscribe-title">Підпишіться на розсилку</p>
+          <div class="subscribe-input-container">
+            <input
+              type="email"
+              name="subscribe-input"
+              class="subscribe-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="button primary btn-subscribe">
+              Підписатися
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
